[package]
name = "renovate-18786"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2"}

[workspace]
members = [
  "crates/subcrate"
]

[workspace.dependencies]
serde = "1.0.146"